# crossq

./: .gitignore  LICENSE  README.md  batch_renorm.py  crossq.py  pyproject.toml  sac.py
runs/Hopper-v4__crossq__1__1718480758/: events.out.tfevents.1718480758.Noahs-MBP.home.96087.0
runs/Hopper-v4__crossq__1__1718480784/: events.out.tfevents.1718480784.Noahs-MBP.home.96183.0
runs/Hopper-v4__crossq__1__1718481292/: events.out.tfevents.1718481292.Noahs-MBP.home.98121.0
runs/Hopper-v4__crossq__1__1718481308/: events.out.tfevents.1718481308.Noahs-MBP.home.98173.0
runs/Hopper-v4__crossq__1__1718481736/: events.out.tfevents.1718481736.Noahs-MBP.home.99487.0
runs/Hopper-v4__crossq__1__1718482463/: events.out.tfevents.1718482463.Noahs-MBP.home.2294.0
wandb/: latest-run
wandb/run-20240616_123841-o0klgc5r/: run-o0klgc5r.wandb
wandb/run-20240616_123841-o0klgc5r/files/: config.yaml  diff.patch  wandb-metadata.json  wandb-summary.json
wandb/run-20240616_123841-o0klgc5r/files/code/: sac.py
wandb/run-20240616_123848-s9xavja2/: run-s9xavja2.wandb
wandb/run-20240616_123848-s9xavja2/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20240616_123848-s9xavja2/files/code/: crossq.py
wandb/run-20240616_124033-900gib3h/: run-900gib3h.wandb
wandb/run-20240616_124033-900gib3h/files/: config.yaml  diff.patch  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20240616_130609-6m52jz2q/: run-6m52jz2q.wandb
wandb/run-20240616_130609-6m52jz2q/files/: config.yaml  diff.patch  wandb-metadata.json  wandb-summary.json
(+2 files in other folders)
