[tool.poetry]
name = "crossq"
version = "0.1.0"
description = ""
authors = ["Noah Farr <login@noahfarr.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gymnasium = {extras = ["mujoco"], version = "^0.29.1"}
torch = "^2.3.1"
tyro = "^0.8.4"
stable-baselines3 = "^2.3.2"
tensorboard = "^2.17.0"
wandb = "^0.17.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
